--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -1,8 +1,8 @@
 name: Terraform Apply
 
 on:
- workflow_dispatch:
- 
+  workflow_dispatch:
+
 jobs:
   terraform_apply:
     runs-on: ubuntu-latest
@@ -12,8 +12,5 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    - run: Mostrando
-      echo 
-
-
-    
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.REGION }}
+    - run: echo Mostrando
