--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,12 @@
 name: Test
 
 on:
- workflow_dispatch:
+  workflow_dispatch:
 
 
 jobs:
   terraform_apply:
     runs-on: ubuntu-latest
+    steps:
     - name: Use Secret
-      run: echo "My secret key is ${ { secrets.MY_SECRET_KEY } }"
+      run: echo "My secret key is ${{ secrets.MY_SECRET_KEY }}"
